<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AnadirCitaActivity"
        android:background="@color/colorVerdeClarito">

    <TextView
            android:text="@string/titAnadirCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvCitaTitulo"
            android:textSize="18sp" android:textColor="@color/colorNegro"
            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etCitaTitulo"
            android:hint="@string/titulo" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvCitaTitulo"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etCitaLocalizacion"
            android:hint="@string/localizacion"
            app:layout_constraintTop_toBottomOf="@+id/etCitaTitulo" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/anadirEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnCitaAñadir"
            app:layout_constraintTop_toBottomOf="@+id/etCitaEnd"
            android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="@+id/etCitaEnd"
            app:layout_constraintEnd_toEndOf="@+id/etCitaEnd"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/etCitaBegin"
            app:layout_constraintTop_toBottomOf="@+id/etCitaLocalizacion" android:layout_marginTop="24dp"
            android:hint="@string/horaEntrada" app:layout_constraintStart_toStartOf="@+id/etCitaLocalizacion"
            app:layout_constraintEnd_toEndOf="@+id/etCitaLocalizacion"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/etCitaEnd"
            app:layout_constraintTop_toBottomOf="@+id/etCitaBegin" android:layout_marginTop="20dp"
            android:hint="@string/horaFin" app:layout_constraintStart_toStartOf="@+id/etCitaBegin"
            app:layout_constraintEnd_toEndOf="@+id/etCitaBegin"/>
</androidx.constraintlayout.widget.ConstraintLayout>