<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AnadirNotaActivity"
        android:background="@color/colorAmarilloClaro">
    <EditText
            android:layout_width="348dp"
            android:layout_height="262dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/etNotaMensaje"
            android:background="@android:color/white" app:layout_constraintTop_toBottomOf="@+id/tvNotaBlocNota"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintVertical_bias="0.305" android:hint="@string/mensaje"/>
    <TextView
            android:text="@string/blocNotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvNotaBlocNota"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="56dp" android:textSize="22sp"
            android:textColor="#000000" android:textStyle="bold"/>
    <Button
            android:text="@string/anadirNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnNotaAnadirNota"
            tools:layout_editor_absoluteX="161dp" app:layout_constraintTop_toBottomOf="@+id/etNotaMensaje"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.367"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNotaTitulo"
            app:layout_constraintBottom_toTopOf="@+id/etNotaMensaje"
            app:layout_constraintStart_toStartOf="@+id/etNotaMensaje" android:hint="@string/titulo"/>
</androidx.constraintlayout.widget.ConstraintLayout>